@@ -1,6 +1,8 @@
 Release 1.0.2 (in development)
 ==============================
 
+* #471: Fix LaTeX references to figures.
+
 * #482: When doing a non-exact search, match only the given type
   of object.
 
